# ZakupkiCheck

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
app/: .dockerignore  Makefile  README.md  app.py  health_server.py  pyproject.toml  requirements.txt
app/.streamlit/: config.toml
app/components/: aggregator.py  cache.py  extractor.py  highlighter.py  llm_client.py  logging_config.py  parser.py  rate_limiter.py  recommendations.py  report.py  retrieval.py  rule_engine.py  schemas.py
app/models/: lr_model.joblib
app/prompts/: contract_extraction.md  documentation_extraction.md  notice_extraction.md  system_prompt.md  tz_extraction.md
app/tests/: conftest.py  smoke_pipeline.py  test_aggregator.py  test_highlighter.py  test_rule_engine.py
app/tests/fixtures/: test_tz_toljatti.txt
baselines/: README.md
baselines/eval_pipeline_v9/: aggregator.py  config.py  llm_client.py  run_pipeline.py
baselines/eval_v9_scripts/: eval_b0_majority.py  eval_b1_regex.py  eval_b2_zeroshot.py  eval_b3_taxonomy.py  eval_b4_pipeline.py  eval_memorization_probe.py  eval_memorization_run.py
baselines/streamlit_v1/: Dockerfile  README.md  app.py  requirements.txt
data/eval/: eval_dataset_v10.csv  ml_features.csv
data/sample/: 202300100161028454.json  202300114959022461.json  202300121671004760.json  202300145687000936.json  202300187298009211.json  202400113223001739.json  202400116297005065.json  202400126646000218.json  202400126646000601.json  202400126646000695.json  README.md  manifest.json
docs/: architecture.md
research/models/: train_lr.py
research/scripts/: ablations.py  (+22 more)
taxonomy/: README.md  clustering.py  clustering_finalize.py  family_to_group_map.csv  taxonomy_56_families.csv  taxonomy_hints.json
(+46 files in other folders)
