[project]
name = "zakupkicheck"
version = "2.0.0"
description = "Compliance checker for Russian public procurement (44-ФЗ)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aza Mavlikulova" }]
keywords = ["procurement", "compliance", "44-fz", "llm", "streamlit"]

dependencies = [
    "streamlit>=1.30",
    "openai>=1.0",
    "pydantic>=2.6",
    "python-docx>=0.8",
    "PyMuPDF>=1.23",
    "fpdf2>=2.7",
    "sentence-transformers>=2.2",
    "chromadb>=0.4",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "structlog>=23.0",
    "tqdm>=4.65",
    "tenacity>=8.2",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.6",
]

[project.urls]
Homepage = "https://github.com/aza-zakupkicheck/v10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["components*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "models"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line-too-long is handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
